unpackaged/main/default/objects/CLT_NotificationManagement__mdt/CLT_NotificationManagement__mdt.object-meta.xml
<CustomObject>
    <label>CLT NotificationManagement</label>
    <pluralLabel>CLT NotificationManagements</pluralLabel>
</CustomObject>