unpackaged/main/default/objects/CLT_NotificationManagement__mdt/fields/CanBeMuteByCA__c.field-meta.xml
<CustomField>
    <fullName>CanBeMuteByCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Mute by CA?</label>
    <type>Checkbox</type>
</CustomField>