unpackaged/main/default/objects/CLT_NotificationManagement__mdt/fields/Muted__c.field-meta.xml
<CustomField>
    <fullName>Muted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muted?</label>
    <type>Checkbox</type>
</CustomField>