unpackaged/main/default/objects/CLT_NotificationManagement__mdt/fields/RedirectionScreen__c.field-meta.xml
<CustomField>
    <fullName>RedirectionScreen__c</fullName>
    <label>Redirection Screen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>