unpackaged/main/default/objects/CLT_NotificationManagement__mdt/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <label>Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>